2006-08-22  Rodney Dawes  <dobey@novell.com>

	* */status/Makefile.am:
	* */status/network-*.*:
	Add new style network status icons from Lapo Calamandrei

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Updated version to 2.15.92 for release
	Update icon-naming-utils requirement to 0.8.1

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* */mimetypes/Makefile.am:
	* */mimetypes/x-office-drawing.*:
	New x-office-drawing icon from Lapo Calamandrei

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* scalable/mimetypes/*.svg: Updates to make the shadows no longer be
	the circular hack, but a pill-shaped hack instead from Lapo Calamandrei

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* 32x32/mimetypes/Makefile.am:
	* 32x32/mimetypes/*.*:
	Add 32x32 versions of mimetypes from Lapo Calamandrei

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* configure.in:
	* 32x32/Makefile.am:
	Add 32x32/mimetypes to the build

	* */mimetypes/Makefile.am:
	* */mimetypes/application-certificate.*:
	Add application-certificate icons from Andreas Nilsson

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/clock.*:
	* */apps/drawer.*:
	* */apps/gnome-panel.*:
	* */apps/panel-notification-area.*:
	* */apps/panel-window-list.*:
	* */apps/panel-window-menu.*:
	Remove these icons as they are installed more appropriately by
	gnome-panel itself now

	* 48x48/categories/Makefile.am:
	* 48x48/categories/applications-accessories.*:
	* 48x48/categories/applications-games.*:
	These icons are available in scalable now

	* 48x48/categories/preferences-desktop-accessibility.*:
	Removed as it conflicts with the apps icon of the same name

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* 48x48/devices/Makefile.am:
	* 48x48/devices/multimedia-player.*:
	Removed this file as we have a scalable version of multimedia-player

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* */actions/Makefile.am:
	* */actions/zoom-best-fit.*: